# roguebench

./: .gitignore  CLAUDE.md  Cargo.toml
.beads/: issues.jsonl
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: alignment.md  architect.md  best-practices.md  bevy.md  combat-system.md  custodian.md  data-system.md  deferral-guard.md  domain.md  editor-system.md  mission-lead.md  organizer.md  test-designer.md
.claude/skills/: journal.md  self-review.md
crates/roguebench-client/: Cargo.toml
crates/roguebench-client/src/: main.rs
crates/roguebench-core/: Cargo.toml
crates/roguebench-core/src/: commands.rs  content.rs  database.rs  enemy.rs  error.rs  items.rs  lib.rs  state_machine.rs
crates/roguebench-editor/: Cargo.toml
crates/roguebench-editor/src/: api.rs  db.rs  lib.rs
crates/roguebench-engine/: Cargo.toml
crates/roguebench-engine/migrations/: V1__create_items_table.sql  V2__create_state_machines_table.sql
crates/roguebench-engine/src/: lib.rs  resources.rs  systems.rs
crates/roguebench-engine/src/commands/: bus.rs  events.rs  log.rs  mod.rs  validate.rs
crates/roguebench-engine/src/data/: content.rs  impls.rs  mod.rs  schema.rs  watcher.rs
crates/roguebench-engine/src/editor/: item_editor.rs  mod.rs
crates/roguebench-engine/src/items/: components.rs  mod.rs  registry.rs  spawn.rs
crates/roguebench-engine/src/scripting/: hooks.rs  loader.rs  mod.rs  runtime.rs  userdata.rs
crates/roguebench-engine/src/state_machine/: component.rs  data.rs  mod.rs
crates/roguebench-engine/tests/: commands_integration.rs  data_pipeline_integration.rs  items_integration.rs  scripting_integration.rs  state_machine_integration.rs
crates/roguebench-protocol/: Cargo.toml
crates/roguebench-protocol/src/: lib.rs
crates/roguebench-server/: Cargo.toml
crates/roguebench-server/src/: main.rs
crates/roguebench-server/src/editor/: enemies.rs  html.rs  mod.rs
crates/roguebench-storage/: Cargo.toml
crates/roguebench-storage/src/: lib.rs  memory.rs  sqlite.rs
docs/: approach.md  build-order.md  getting-started.md  glossary.md  mission.md  priorities.md  readme.md  roles.md  stack.md  workflows.md
docs/agents/: alignment.md  architect.md  best-practices.md  bevy.md  custodian.md  deferral-guard.md  memory.md  mission-lead.md  orchestrator.md  organizer.md  self-review.md  test-designer.md
docs/decisions/: networking.md  scripting.md  storage.md
docs/patterns/: command-bus.md  content-registry.md  state-machine.md
docs/planning/architecture/: data.md  editor.md  framework.md  localization.md  protocol.md  scripting.md
docs/planning/features/: accessibility_audio.md  accessibility_cognitive.md  accessibility_difficulty.md  accessibility_motor.md  accessibility_visual.md  aggro_detection.md  ai_state_machine.md  ambient_audio.md  animation_state_machine.md  aptitudes.md  arena_generation.md  arena_walls.md  asset_loading.md  attack_cooldowns.md  blood_spray.md  bookmarks.md  boss_stages.md  bullet_trail.md  cadaver.md  camera_bump.md  camera_shake.md  camera_zoom.md  cartridge_ejection.md  character_states.md  checkpoints.md  collision_layers.md  combat_sounds.md  companions.md  controls_hint_ui.md  credits.md  currency.md  damage_system.md  dash_trail.md  data_driven_characters.md  death_explosion.md  debug_visualization.md  dev_console.md  dev_control_center.md  dev_metrics.md  dialogue_choices.md  (+101 more)
docs/planning/framework/: README.md  animation_framework.md  audio_framework.md  collision_framework.md  command_bus.md  data_loading.md  entity_id.md  event_hooks.md  movement_framework.md  particle_framework.md  spawn_framework.md  state_machine.md  timer_framework.md  ui_framework.md
docs/skills/: journal.md  memory.md
