[package]
name = "roguebench-client"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "roguebench-client"
path = "src/main.rs"

[dependencies]
roguebench-protocol = { workspace = true }
bevy = { workspace = true }
lightyear = { workspace = true }
lightyear_udp = "0.25"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
