[package]
name = "roguebench-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
