[package]
name = "roguebench-editor"
description = "Web editor backend for Roguebench content authoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
roguebench-core.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
