[package]
name = "roguebench-editor"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
roguebench-core.workspace = true
roguebench-protocol.workspace = true
roguebench-storage.workspace = true

# Web server
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
tracing.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
