[package]
name = "roguebench-engine"
description = "Bevy plugins and systems for Roguebench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
roguebench-core.workspace = true
roguebench-protocol.workspace = true
bevy.workspace = true
bevy_egui.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
refinery.workspace = true
mlua.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
