[package]
name = "roguebench-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "roguebench-server"
path = "src/main.rs"

[dependencies]
roguebench-core = { workspace = true }
roguebench-protocol = { workspace = true }
bevy = { workspace = true }
lightyear = { workspace = true }
lightyear_udp = { version = "0.25", features = ["server"] }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
